added export fix

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ html
 		link(rel="stylesheet", href="/stylesheets/main.css")
 	body
 		header
-			h1 meine site
+			h1 Raspberry
 		.container
 			.main-content
 				block content
