- removed nib - removed few unnecessary node packages that were not used - added favicon

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,9 @@
 doctype
 html
 	head
-		title Zis is teh erste test
+		title Lamp Switch
 		link(rel="stylesheet", href="/stylesheets/main.css")
+		link(rel="icon", type="image/png", href="/images/lamp-icon.png")
 	body
 		header
 			h1 meine site
