--- a/public/views/index.html
+++ b/public/views/index.html
@@ -43,6 +43,11 @@
             </div>
         </div>
 
+        <form name="none" action="/relays" method="POST">
+            <input type="text" name="something"></input>
+            <input type="submit" value="send"></input>
+        </form>
+
         <footer>
             <p>zis ist zeh footerh</p>
         </footer>
