- removed jade files - added android web-app meta tag

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+		<meta name="mobile-web-app-capable" content="yes">
         <title>Relay Switcher</title>
         <link rel="stylesheet" href="../stylesheets/main.css"/>
         <link rel="stylesheet" type="image/png" href="../content/images/lamp-icon.png"/>
