- added apple meta - added icons

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,54 +1,55 @@
 <!DOCTYPE html>
 <html>
-    <head>
+	<head>
 		<meta name="mobile-web-app-capable" content="yes">
-        <title>Relay Switcher</title>
-        <link rel="stylesheet" href="../stylesheets/main.css"/>
-        <link rel="stylesheet" type="image/png" href="../content/images/lamp-icon.png"/>
-    </head>
-    <body>
-        <header>
-            <h1>Raspberry</h1>
-        </header>
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<title>Relay Switcher</title>
+		<link rel="stylesheet" href="../stylesheets/main.css"/>
+		<link rel="icon" type="image/png" href="../content/images/lamp-icon.png"/>
+		<link rel="apple-touch-icon" type="image/png" href="../content/images/apple-icon.png"/>
+	</head>
+	<body>
+		<header>
+			<h1>Raspberry</h1>
+		</header>
 
-        <div class="container">
-            <div class="main-content">
-                <div class="entry">
-                    <div class="label">
-                        <p>Relay switch #1</p>
-                    </div>
-                    <div class="button-container">
-                        <div class="button-background">
-                            <span class="left">ON</span>
-                            <span class="right">OFF</span>
-                        </div>
-                        <div class="button-slider" id="relay1">
-                        </div>
-                    </div>
-                </div>
+		<div class="container">
+			<div class="main-content">
+				<div class="entry">
+					<div class="label">
+						<p>Relay switch #1</p>
+					</div>
+					<div class="button-container">
+						<div class="button-background">
+							<span class="left">ON</span>
+							<span class="right">OFF</span>
+						</div>
+						<div class="button-slider" id="relay1">
+						</div>
+					</div>
+				</div>
 
-                <div class="entry">
-                    <div class="label">
-                        <p>Relay switch #2</p>
-                    </div>
-                    <div class="button-container">
-                        <div class="button-background">
-                            <span class="left">ON</span>
-                            <span class="right">OFF</span>
-                        </div>
-                        <div class="button-slider" id="relay2">
-                        </div>
-                    </div>
-                </div>
-               
-            </div>
-        </div>
+				<div class="entry">
+					<div class="label">
+						<p>Relay switch #2</p>
+					</div>
+					<div class="button-container">
+						<div class="button-background">
+							<span class="left">ON</span>
+							<span class="right">OFF</span>
+						</div>
+						<div class="button-slider" id="relay2">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
-        <footer>
-            <p>zis ist zeh footerh</p>
-        </footer>
+		<footer>
+			<p>zis ist zeh footerh</p>
+		</footer>
 
-    </body>
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="../scripts/controller/main.js"></script>
+	</body>
+	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script src="../scripts/controller/main.js"></script>
 </html>
